<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0174E1"
    tools:context="uz.gita.dima.palapan.presenter.screens.level.LevelScreen">



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/easy"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:textAlignment="center"
        android:text="@string/easy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/medium"
        android:textSize="32sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/medium"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:textAlignment="center"
        android:text="@string/medium"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/easy"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/hard"
        android:gravity="center"
        android:background="@drawable/btn_bg"
        android:textSize="32sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hard"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:textAlignment="center"
        android:text="@string/hard"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medium"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_bg"
        android:textSize="32sp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="20dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/uzor_nagis_3"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="20dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/uzor_nagis_3"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/uzor_nagis_5"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/uzor_nagis_5"/>


</androidx.constraintlayout.widget.ConstraintLayout>