<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#0174E1"
    tools:context="uz.gita.dima.palapan.presenter.screens.game.GameFragment">


    <ImageView
        android:id="@+id/reload"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:src="@drawable/icon2"
        android:background="@drawable/level_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:elevation="5dp"
        android:background="@drawable/level_bg"
        android:src="@drawable/icon1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:src="@drawable/icon3"
        android:background="@drawable/level_bg"
        app:layout_constraintEnd_toStartOf="@id/reload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/menu" />


    <ImageView
        android:id="@+id/levelNumber"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:background="@drawable/level_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/levelNumber"
        app:layout_constraintLeft_toLeftOf="@id/levelNumber"
        app:layout_constraintRight_toRightOf="@id/levelNumber"
        app:layout_constraintTop_toTopOf="@id/levelNumber">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Level"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="1/10"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/attemptBg"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:background="@drawable/level_bg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/rightContainer"
        android:layout_width="120dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/attemptBg"
        app:layout_constraintLeft_toLeftOf="@id/attemptBg"
        app:layout_constraintRight_toRightOf="@id/attemptBg"
        app:layout_constraintTop_toTopOf="@id/attemptBg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/easy"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@id/reload"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:splitMotionEvents="false"
        android:layout_marginBottom="24dp"
        android:windowEnableSplitTouch = "false"
        app:layout_constraintTop_toBottomOf="@id/levelNumber">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:splitMotionEvents="false"
            android:windowEnableSplitTouch = "false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/next_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:background="@drawable/btn_bg_next_level"
        android:paddingVertical="8dp"
        android:text="Next level"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/congratulations_nyou_are_winner"
        android:textAllCaps="true"
        android:background="@drawable/btn_bg_next_level"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    

</androidx.constraintlayout.widget.ConstraintLayout>